--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive-3d-carousel": "^1.3.0",
     "react-scroll": "^1.9.0",
     "react-select-async-paginate": "^0.7.3",
-    "sass": "^1.69.5"
+    "react-slick": "^0.29.0",
+    "sass": "^1.69.5",
+    "slick-carousel": "^1.8.1"
   }
 }
